--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,38 @@
-"env/" 
-".env" 
+# Byte-compiled files
+*.pyc
+*.pyo
+__pycache__/
+
+# Django specific
+*.log
+*.pot
+*.pyc
+__pycache__
+db.sqlite3
+*.sqlite3
+media
+staticfiles
+
+# Environment variables and settings
+.env
+.env.*
+*.env
+
+# VS Code settings
+.vscode/
+
+# PyCharm settings
+.idea/
+
+# MySQL, PostgreSQL and other database files
+*.db
+*.bak
+*.sql
+
+# Virtual environments
+venv/
+env/
+*.env/
+
+# Docker
+*.docker/
